feat: add public workspace support
